# Taco-LLMingway

./: .gitignore  README.md  main.py  pyproject.toml
src/: embeddings.py  logger.py  model.py  tokenizer.py  train.py  utils.py
src/taco_llmingway/: __init__.py  embeddings.py  logger.py  model.py  tokenizer.py  train.py  utils.py
