[project]
name = "taco-llmingway"
version = "1.0.0"
description = "Mini-GPT for Taco Hemingway lyrics generation"
authors = [{name = "Dominik Meisner"}]
dependencies = [
    "torch",
    "tqdm",
    "matplotlib"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
